[tool.poetry]
name = "openai assistant api"
version = "0.1.0"
description = ""
authors = ["Luis Bernal <luis.bernal@pingahla.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.30.1"
pandas = "^2.2.2"
openpyxl = "^3.1.2"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
